# demosaic

./: .gitignore  CMakeLists.txt  README.md  build.bash
configs/: demosaic_osal_global_types.h
configs/cfs/: demosaic_cfs_global_types.h
configs/ros/: demosaic_ros_global_types.h  demosaic_ros_private.h
include/demosaic/: demosaic_pub.h  demosaic_types_pub.h
src/: demosaic.c
test/: GoogleTestCMakeLists.txt.in  ImageioCMakeLists.txt.in  demosaic_gtest.cpp  demosaic_test_global_types.h  demosaic_test_private.h
test/output/coverage/: index-sort-f.html  index-sort-l.html  index.html
test/output/coverage/src/: demosaic.c.func-sort-c.html  demosaic.c.func.html  demosaic.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html
